@@ -105,6 +105,10 @@
    <systemDef name="IBM-AIX">
       <sysoid>.1.3.6.1.4.1.2.3.1.2.1.1.3</sysoid>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>aix-teaser</includeGroup>
          <includeGroup>aix-system-scalars</includeGroup>
          <includeGroup>aix-volume-groups</includeGroup>
@@ -114,6 +118,15 @@
          <!-- <includeGroup>aix-physical-volume</includeGroup> -->
          <!-- Uncomment if you want AIX print queue stats -->
          <!-- <includeGroup>aix-print-queue</includeGroup> -->
+      </collect>
+   </systemDef>
+   <systemDef name="IBM-AS400">
+      <sysoid>.1.3.6.1.4.1.2.6.11</sysoid>
+      <collect>
+         <includeGroup>mib2-host-resources-storage-non-unique</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
       </collect>
    </systemDef>
 </datacollection-group>
