@@ -2,6 +2,7 @@
    <systemDef name="Konica Minolta Network Printer">
       <sysoidMask>.1.3.6.1.4.1.18334.1.1.1.2.1</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
          <includeGroup>printer-usage</includeGroup>
          <includeGroup>printer-mib-supplies</includeGroup>
       </collect>
