@@ -23,6 +23,8 @@
    <systemDef name="Microsoft Windows NT/2000">
       <sysoidMask>.1.3.6.1.4.1.311.1.1.3.1.</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
          <includeGroup>microsoft-http</includeGroup>
          <includeGroup>windows-host</includeGroup>
       </collect>
