@@ -60,6 +60,10 @@
    <systemDef name="Palo Alto PA-4050">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.1</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -69,6 +73,10 @@
    <systemDef name="Palo Alto PA-4020">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.2</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -78,6 +86,10 @@
    <systemDef name="Palo Alto PA-2050">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.3</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -87,6 +99,10 @@
    <systemDef name="Palo Alto PA-2020">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.4</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -96,6 +112,10 @@
    <systemDef name="Palo Alto PA-4060">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.5</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -105,15 +125,32 @@
    <systemDef name="Palo Alto PA-500">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.6</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
          <includeGroup>pan-sessions</includeGroup>
       </collect>
    </systemDef>
+   <systemDef name="Palo Alto Panorama">
+      <sysoidMask>.1.3.6.1.4.1.25461.2.3.7</sysoidMask>
+      <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
+      </collect>
+   </systemDef>
    <systemDef name="Palo Alto PA-5060">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.8</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -123,6 +160,10 @@
    <systemDef name="Palo Alto PA-5050">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.9</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -132,6 +173,10 @@
    <systemDef name="Palo Alto PA-5020">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.11</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -141,6 +186,10 @@
    <systemDef name="Palo Alto PA-200">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.12</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
          <includeGroup>pan-sessions</includeGroup>
@@ -149,6 +198,10 @@
    <systemDef name="Palo Alto PA-3050">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.17</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -158,6 +211,10 @@
    <systemDef name="Palo Alto PA-3020">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.18</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -167,6 +224,10 @@
    <systemDef name="Palo Alto PA-3060">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.19</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-global-protect</includeGroup>
          <includeGroup>pan-vsys-sessions</includeGroup>
          <includeGroup>pan-phy-sensor</includeGroup>
@@ -180,6 +241,10 @@
    <systemDef name="Palo Alto M-100">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.30</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-log-collector-disk</includeGroup>
          <includeGroup>pan-log-collector-rate</includeGroup>
          <includeGroup>pan-log-collector-duration</includeGroup>
@@ -189,6 +254,10 @@
    <systemDef name="Palo Alto M-500">
       <sysoidMask>.1.3.6.1.4.1.25461.2.3.35</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-processor</includeGroup>
          <includeGroup>pan-log-collector-disk</includeGroup>
          <includeGroup>pan-log-collector-rate</includeGroup>
          <includeGroup>pan-log-collector-duration</includeGroup>
