@@ -2,6 +2,9 @@
    <systemDef name="Savin or Ricoh Printers">
       <sysoidMask>.1.3.6.1.4.1.367.</sysoidMask>
       <collect>
+         <includeGroup>mib2-host-resources-system</includeGroup>
+         <includeGroup>mib2-host-resources-memory</includeGroup>
+         <includeGroup>mib2-host-resources-storage</includeGroup>
          <includeGroup>printer-usage</includeGroup>
       </collect>
    </systemDef>
