@@ -44,6 +44,9 @@ For SNMP agents supporting Standard MIB-II the interface traffic is only collect
 IMPORTANT: Devices which support only support 32bit counters do not collect data after updating to this release.
            Identify those devices and include the `mib2-interface` data collection group in the related systemDefinitions.
 
+IMPORTANT: We have removed the data collection from all Standard MIB-II compatible agents trying to collect the POWER-ETHERNET-MIB.
+           If you have devices which provide those metrics, include the `mib2-powerethernet` data collection group to your specific devices.
+
 Before you update check the attachments in NMS-9737 with hints what is changed and which configuration files are affected.
 
 === New Features
